--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
 	"scripts": {
 		"test": "lerna run test-critical",
 		"test-all": "lerna run test-all",
-		"postinstall": "lerna bootstrap",
+		"postinstall": "lerna bootstrap --use-workspaces",
 		"doc": "lerna run doc ; cp -r doc-assets docs; git add docs/doc-assets",
 		"clean": "lerna clean --yes; lerna run clean; rm -rf node_modules package-lock.json; rm -rf docs; find . -name \"node_modules\" -exec rm -rf '{}' +; ",
 		"build": "lerna run build",
