--- a/packages/node-keys/package.json
+++ b/packages/node-keys/package.json
@@ -7,7 +7,7 @@
     "build": "tsc",
     "watch": "tsc --watch",
     "test": "npm run test-critical",
-    "test-critical": "ts-node node_modules/jasmine/bin/jasmine",
+    "test-critical": "ts-node  -r tsconfig-paths/register  node_modules/jasmine/bin/jasmine",
     "test-js": "tsc && node node_modules/jasmine/bin/jasmine.js --config=./spec/support/jasmine-js.json",
     "doc": "tsc && typedoc --options typedoc.ts",
     "test-coverage-html-report": "rm -rf coverage; nyc --clean -r lcov -e .ts -x \"*Spec.ts\" ts-node -r tsconfig-paths/register node_modules/jasmine/bin/jasmine",
@@ -42,6 +42,5 @@
   ],
   "author": "Sebastian Gurin",
   "license": "ISC",
-  "dependencies": {
-  }
+  "dependencies": {}
 }
