--- a/packages/terminal-mouse-control-prototype1/package.json
+++ b/packages/terminal-mouse-control-prototype1/package.json
@@ -8,8 +8,7 @@
     "watch": "tsc --watch",
     "lint": "tslint src/**/*.ts",
     "lint-fix": "tslint --fix src/**/*.ts",
-    "test-all": "ts-node -r tsconfig-paths/register node_modules/jasmine/bin/jasmine --config=./spec/support/jasmine-all.json",
-    "test-critical": "ts-node -r tsconfig-paths/register node_modules/jasmine/bin/jasmine --config=./spec/support/jasmine-critical.json",
+    "test-critical": "ts-node -r tsconfig-paths/register node_modules/jasmine/bin/jasmine --config=./spec/support/jasmine.json",
     "test": "npm run test-critical",
     "test-js": "tsc && node node_modules/jasmine/bin/jasmine",
     "clean": "find . -name \"node_modules\" -exec rm -rf '{}' +; rm -rf package-lock.json lib",
@@ -30,7 +29,6 @@
     "@types/jasmine": "^2.8.6",
     "@types/node": "^9.6.2",
     "@types/shelljs": "^0.7.8",
-    "cli-driver": "^0.1.2",
     "jasmine": "^3.1.0",
     "ts-node": "^5.0.1",
     "tsconfig-paths": "^3.2.0",
@@ -39,7 +37,9 @@
     "typescript": "^2.8.1"
   },
   "dependencies": {
-    "cli-driver": "^0.1.2"
+    "cli-driver": "^0.1.2",
+    "node-keys": "^0.1.2",
+    "terminal-kit": "^1.15.1"
   },
   "private": true
 }
