--- a/package.json
+++ b/package.json
@@ -7,13 +7,18 @@
 		"test-all": "lerna run test-all",
 		"bootstrap": "lerna bootstrap --use-workspaces",
 		"doc": "lerna run doc ; cp -r doc-assets docs; git add docs/doc-assets",
-		"clean": "lerna clean --yes; lerna run clean; rm -rf node_modules package-lock.json; rm -rf docs; find . -name \"node_modules\" -exec rm -rf '{}' +; ",
+		"clean": "lerna clean --yes; lerna run clean; rm -rf node_modules package-lock.json; find . -name \"node_modules\" -exec rm -rf '{}' +; ",
 		"build": "lerna run build",
 		"all": "npm run clean ; npm install ; npm run build ; npm run doc ; npm test",
-		"test-clone": "rm -rf ../cli-driver-test; mkdir ../cli-driver-test; cd ../cli-driver-test; git clone ../cli-driver/.git;  cd cli-driver ; npm install ; npm test; cd ../../cli-drive",
+		"test-clone": "rm -rf ../cli-driver-test; mkdir ../cli-driver-test; cd ../cli-driver-test; git clone ../cli-driver/.git;  cd cli-driver ; npm install ; yarn test; cd ../../cli-drive",
 		"test-nobuild": "lerna run test-nobuild",
 		"test-nobuild-nolerna": "cd packages/cli-driver ; npm run test-nobuild && cd ../sample-app-using-inquirer && npm run test-nobuild",
 		"prepublish": "npm run build"
 	},
-	"dependencies": {}
+  "workspaces": {
+		"packages": ["packages/*"],
+  	"nohoist": ["**/jasmine", "**/jasmine/**", "**/node-pty", "**/node-pty/**"]
+	},
+	"private": true,
+	"dependencies": {}	
 }
