--- a/packages/node-keys/package.json
+++ b/packages/node-keys/package.json
@@ -7,7 +7,7 @@
     "build": "tsc",
     "watch": "tsc --watch",
     "test": "npm run test-critical",
-    "test-critical": "ts-node  -r tsconfig-paths/register  node_modules/jasmine/bin/jasmine",
+    "test-critical": "ts-node -r tsconfig-paths/register node_modules/jasmine/bin/jasmine",
     "test-js": "tsc && node node_modules/jasmine/bin/jasmine.js --config=./spec/support/jasmine-js.json",
     "doc": "tsc && typedoc --options typedoc.ts",
     "test-coverage-html-report": "rm -rf coverage; nyc --clean -r lcov -e .ts -x \"*Spec.ts\" ts-node -r tsconfig-paths/register node_modules/jasmine/bin/jasmine",
@@ -26,9 +26,10 @@
   },
   "devDependencies": {
     "@types/jasmine": "^2.8.6",
+    "@types/node": "^9.6.2",
     "jasmine": "^3.1.0",
     "ts-node": "^5.0.1",
-    "tsconfig-paths": "^3.3.0",
+    "tsconfig-paths": "^3.3.1",
     "tslint": "^5.9.1",
     "tslint-config-standard": "^7.0.0",
     "typedoc": "^0.11.1",
