--- a/packages/cli-driver/package.json
+++ b/packages/cli-driver/package.json
@@ -9,11 +9,10 @@
     "watch": "tsc --watch",
     "test": "npm run test-critical",
     "test-js": "tsc && node node_modules/jasmine/bin/jasmine.js --config=./spec/support/jasmine-critical.json",
-    "test-critical": "ts-node -r tsconfig-paths/register node_modules/jasmine/bin/jasmine --config=./spec/support/jasmine-critical.json",
-    "test-all": "ts-node -r tsconfig-paths/register node_modules/jasmine/bin/jasmine --config=./spec/support/jasmine-all.json",
-    "test-critical-coverage-html-report": "rm -rf coverage; nyc --clean -r lcov -e .ts -x \"*Spec.ts\" ts-node -r tsconfig-paths/register node_modules/jasmine/bin/jasmine --config=./spec/support/jasmine-critical.json",
-    "test-critical-coverage-report": "nyc --clean -r json -e .ts -x \"*Spec.ts\" ts-node -r tsconfig-paths/register node_modules/jasmine/bin/jasmine --config=./spec/support/jasmine-critical.json",
-    "prepare": "tsc",
+    "test-critical": "ts-node node_modules/jasmine/bin/jasmine --config=./spec/support/jasmine-critical.json",
+    "test-all": "ts-node node_modules/jasmine/bin/jasmine --config=./spec/support/jasmine-all.json",
+    "test-critical-coverage-html-report": "rm -rf coverage; nyc --clean -r lcov -e .ts -x \"*Spec.ts\" ts-node node_modules/jasmine/bin/jasmine --config=./spec/support/jasmine-critical.json",
+    "test-critical-coverage-report": "nyc --clean -r json -e .ts -x \"*Spec.ts\" ts-node node_modules/jasmine/bin/jasmine --config=./spec/support/jasmine-critical.json",
     "doc": "tsc && typedoc --options typedoc.ts",
     "clean": "find . -name \"node_modules\" -exec rm -rf '{}' + ; rm -rf  package-lock.json lib tmp* src/*.d.ts",
     "lint": "tslint src/**/*.ts",
@@ -33,27 +32,22 @@
   ],
   "keywords": [],
   "author": "Sebastián Gurin",
-  "license": "ISC",
+  "license": "MIT",
   "dependencies": {
-    "@types/node": "^9.6.2",
-    "ansi-escape-sequences": "^4.0.0",
-    "node-keys": "^0.1.3",
+    "ansi-escape-sequences": "^4.1.0",
+    "node-keys": "^0.1.3",    
     "node-pty": "git+https://github.com/cancerberoSgx/node-pty.git",
-    "shelljs": "^0.8.1"
+    "shelljs": "^0.8.3"
   },
   "devDependencies": {
-    "@types/jasmine": "^2.8.6",
-    "@types/shelljs": "^0.7.8",
-    "jasmine": "^3.1.0",
-    "nyc": "^11.6.0",
-    "strip-ansi": "^4.0.0",
-    "ts-node": "^5.0.1",
-    "tsconfig-paths": "^3.2.0",
-    "tslint": "^5.9.1",
-    "tslint-config-standard": "^7.0.0",
-    "typedoc": "^0.11.1",
-    "typescript": "^2.8.1"
+    "@types/jasmine": "^2.8.16",
+    "@types/node": "^10.5.2",
+    "@types/shelljs": "^0.8.4",
+    "extract-interface-docs": "file:../extract-interface-docs",
+    "jasmine": "^3.3.1",
+    "prettier": "^1.16.4",
+    "ts-node": "^7.0.1",
+    "typescript": "^3.4.1"
   },
-  "readme": "README.MD",
-  "repository": "https://github.com/cancerberoSgx/cli-driver/tree/master/packages/cli-driver"
+  "repository": "https://github.com/cancerberoSgx/cli-driver"
 }
