--- a/packages/cli-driver/package.json
+++ b/packages/cli-driver/package.json
@@ -1,7 +1,7 @@
 {
   "name": "cli-driver",
   "version": "0.1.3",
-  "description": "like webdriver but for the command line",
+  "description": "Automate your complex CLI applications, like webdriver but for the command line",
   "main": "lib/src/index.js",
   "types": "lib/src/index.d.ts",
   "scripts": {
@@ -21,31 +21,26 @@
     "prettier": "npx prettier  --write --arrow-parens avoid --parser typescript --use-tabs false --no-semi true --single-quote true --tab-width 2 --trailing-comma none --end-of-line lf --prose-wrap preserve --print-width 120  --jsx-bracket-same-line true \"src/**/*.ts*\" \"spec/**/*.ts*\"",
     "all": "npm run clean && npm run prettier && npm run build && npm test"
   },
-  "scripts-description": {
-    "npm test": "run critical tests. By default, tests are run using ts-node. You can filter test to run but entering for example: 'npm test -- **/writeSpec.ts'",
-    "npm run test-js": "run critical tests but instead using ts-node compiles them with tsc and runs compiled JavaScript code",
-    "npm run build": "run critical tests compiled with tsc and running compiled JavaScript code",
-    "npm run watch": "continuously run TypeScript compiler when changes on .ts files are detected",
-    "npm run help": "Prints this help"
-  },
-  "files": [
-    "lib",
-    "types"
+  "keywords": [
+    "automation",
+    "CLI",
+    "command line",
+    "web-driver",
+    "test",
+    "CI"
   ],
-  "keywords": [],
   "author": "Sebastián Gurin",
   "license": "MIT",
-  "dependencies": {
-    "ansi-escape-sequences": "^4.1.0",
+  "dependencies": {    
+    "ansi-escape-sequences": "git+https://github.com/cancerberoSgx/ansi-escape-sequences.git#types",
     "node-keys": "^0.1.3",
-    "node-pty": "file:../../../node-pty",
-    "shelljs": "^0.8.3"
+    "node-pty": "git+https://github.com/cancerberoSgx/node-pty.git"
   },
   "devDependencies": {
     "@types/jasmine": "^2.8.16",
+    "shelljs": "^0.8.3",
     "@types/node": "^10.14.4",
-    "@types/shelljs": "^0.8.4",
-    "extract-interface-docs": "file:../../../extract-interface-docs",
+    "@types/shelljs": "^0.8.4",    
     "jasmine": "^3.3.1",
     "prettier": "^1.16.4",
     "ts-node": "^7.0.1",
