--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
 	"devDependencies": {
-		"lerna": "^2.9.1"
+		"lerna": "^3.13.4",
+		"tslint": "^5.16.0"
 	},
 	"scripts": {
 		"test": "lerna run test-critical",
@@ -15,10 +16,19 @@
 		"test-nobuild-nolerna": "cd packages/cli-driver ; npm run test-nobuild && cd ../sample-app-using-inquirer && npm run test-nobuild",
 		"prepublish": "npm run build"
 	},
-  "workspaces": {
-		"packages": ["packages/*"],
-  	"nohoist": ["**/jasmine", "**/jasmine/**", "**/node-pty", "**/node-pty/**", "**/tsconfig-paths", "**/tsconfig-paths/**" ]
+	"workspaces": {
+		"packages": [
+			"packages/*"
+		],
+		"nohoist": [
+			"**/jasmine",
+			"**/jasmine/**",
+			"**/node-pty",
+			"**/node-pty/**",
+			"**/tsconfig-paths",
+			"**/tsconfig-paths/**"
+		]
 	},
 	"private": true,
-	"dependencies": {}	
+	"dependencies": {}
 }
