--- a/packages/cli-driver/package.json
+++ b/packages/cli-driver/package.json
@@ -8,18 +8,17 @@
     "build": "tsc",
     "watch": "tsc --watch",
     "test": "npm run test-critical",
-    "test-js": "tsc && node node_modules/jasmine/bin/jasmine.js --config=./spec/support/jasmine-critical.json",
+    "test-all-js": "npm run clean && npm run build && node node_modules/jasmine/bin/jasmine.js --config=./spec/support/jasmine-all-js.json",
     "test-critical": "ts-node node_modules/jasmine/bin/jasmine --config=./spec/support/jasmine-critical.json",
     "test-all": "ts-node node_modules/jasmine/bin/jasmine --config=./spec/support/jasmine-all.json",
     "test-critical-coverage-html-report": "rm -rf coverage; nyc --clean -r lcov -e .ts -x \"*Spec.ts\" ts-node node_modules/jasmine/bin/jasmine --config=./spec/support/jasmine-critical.json",
     "test-critical-coverage-report": "nyc --clean -r json -e .ts -x \"*Spec.ts\" ts-node node_modules/jasmine/bin/jasmine --config=./spec/support/jasmine-critical.json",
     "doc": "tsc && typedoc --options typedoc.ts",
-    "clean": "rm -rf lib tmp",
-    "lint": "tslint src/**/*.ts",
-    "lint-fix": "tslint --fix src/**/*.ts",
+    "clean": "rm -rf lib tmp*",
     "help": "node -p \"'\\nHelp on this package\\'s npm scripts:\\n'+JSON.stringify(JSON.parse(require('shelljs').cat('package.json').toString())['scripts-description'], null, 2)+'\\n'\"",
-    "prettier": "npx prettier  --write --arrow-parens avoid --parser typescript --use-tabs false --no-semi true --single-quote true --tab-width 2 --trailing-comma none --end-of-line lf --prose-wrap preserve --print-width 120  --jsx-bracket-same-line true \"src/**/*.ts*\" \"spec/**/*.ts*\"",
-    "all": "npm run clean && npm run prettier && npm run build && npm test",
+     "lint": " npx ts-refactor format \"src/**/*.ts*\" \"spec/**/*.ts*\" ./formatCodeSettings.json --tsConfigPath ./tsconfig.json --dontAsk",
+
+    "all": "npm run clean && npm run lint && npm run build && npm run test-all && npm run test-all-js",
     "all-publish": "npm run all && git commit -a -m \"version patch\" && npm version patch && npm publish"
   },
   "keywords": [
@@ -34,16 +33,17 @@
   "license": "MIT",
   "dependencies": {
     "ansi-escape-sequences": "git+https://github.com/cancerberoSgx/ansi-escape-sequences.git#types",
+    "@types/node": "^12.6.8",
+    "misc-utils-of-mine-generic": "^0.2.35",
     "node-keys": "^0.1.5",
     "node-pty": "git+https://github.com/cancerberoSgx/node-pty.git"
   },
   "devDependencies": {
     "@types/jasmine": "^3.3.15",
     "shelljs": "^0.8.3",
-    "@types/node": "^12.6.8",
     "@types/shelljs": "^0.8.5",
     "jasmine": "^3.4.0",
-    "prettier": "^1.18.2",
+    "ts-refactor": "0.0.11",
     "ts-node": "^8.3.0",
     "typescript": "^3.5.3"
   },
