--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
 		"test": "lerna run test-critical",
 		"test-all": "lerna run test-all",
 		"bootstrap": "lerna bootstrap --use-workspaces",
-		"doc": "lerna run doc ; cp -r doc-assets docs; git add docs/doc-assets",
+		"docs": "lerna run docs",
 		"clean": "lerna clean --yes; lerna run clean; rm -rf node_modules package-lock.json; find . -name \"node_modules\" -exec rm -rf '{}' +; ",
 		"build": "lerna run build",
 		"all": "npm run clean ; npm install ; npm run build ; npm run doc ; npm test",
