--- a/packages/cli-driver/package.json
+++ b/packages/cli-driver/package.json
@@ -1,6 +1,6 @@
 {
   "name": "cli-driver",
-  "version": "0.2.4",
+  "version": "0.2.5",
   "description": "Automate your complex CLI applications, like webdriver but for the command line",
   "main": "lib/src/index.js",
   "types": "lib/src/index.d.ts",
@@ -13,14 +13,15 @@
     "test-all": "ts-node node_modules/jasmine/bin/jasmine --config=./spec/support/jasmine-all.json",
     "test-critical-coverage-html-report": "rm -rf coverage; nyc --clean -r lcov -e .ts -x \"*Spec.ts\" ts-node node_modules/jasmine/bin/jasmine --config=./spec/support/jasmine-critical.json",
     "test-critical-coverage-report": "nyc --clean -r json -e .ts -x \"*Spec.ts\" ts-node node_modules/jasmine/bin/jasmine --config=./spec/support/jasmine-critical.json",
-    "doc": "tsc && typedoc --options typedoc.ts",
+    "docs": "tsc && typedoc --options typedoc.ts && npx markdown-toc README.md -i && rm -rf ../../docs/doc-assets && cp -r ../../doc-assets ../../docs && git add ../../docs/doc-assets",
     "clean": "rm -rf lib tmp*",
     "help": "node -p \"'\\nHelp on this package\\'s npm scripts:\\n'+JSON.stringify(JSON.parse(require('shelljs').cat('package.json').toString())['scripts-description'], null, 2)+'\\n'\"",
     "lint": " npx ts-refactor format \"src/**/*.ts*\" \"spec/**/*.ts*\" ./formatCodeSettings.json --dontAsk",
-    "all": "npm run clean && npm run lint && npm run build && npm run test-all && npm run test-all-js",
-    "all-publish": "npm run all && git commit -a -m \"version patch\" && npm version patch && npm publish"
+    "all": "npm run clean && npm run lint && npm run build && npm run test-all && npm run test-all-js && npm run docs",
+    "all-publish": "npm run all && git commit -a -m \"version patch\" && npm version patch && npm publish",
+    "all-from-scratch": "rm -rf node_modules/ package-lock.json && ncu -u && npm i && npm run all"
   },
-  "keywords": [ 
+  "keywords": [
     "automation",
     "CLI",
     "command line",
@@ -43,8 +44,15 @@
     "@types/shelljs": "^0.8.5",
     "jasmine": "^3.5.0",
     "ts-refactor": "0.0.11",
+    "markdown-toc": "^1.2.0",
     "ts-node": "^8.4.1",
     "typescript": "^3.6.3"
   },
-  "repository": "https://github.com/cancerberoSgx/cli-driver"
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/cancerberoSgx/cli-driver.git"
+  },
+  "bugs": {
+    "url": "https://github.com/cancerberoSgx/cli-driver"
+  }
 }
